<resources>
    <string name="app_name" translatable="false">Secret Notes Develop</string>

    <string name="facebook_application_id" translatable="false">2239254482952897</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2239254482952897</string>

    <string name="categories">CATEGORIES</string>
    <string name="add_category">ADD CATEGORY</string>
    <string name="delete_category">Delete category</string>
    <string name="rename_category">Rename category</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="insert_the_password">Insert the note password:</string>
    <string name="save">Save</string>
    <string name="delete_note">Delete note</string>
    <string name="unlock_note">Unlock note</string>
    <string name="wrong_password_retry">Wrong password, please retry!</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="procede_whitout_account">Proceed without account</string>
    <string name="login">Login or Register\nemail - Google - Facebook</string>
    <string name="user_account">User account</string>
    <string name="generic_error">Something wrong happened. Please retry!</string>
    <string name="init_no_user">Initialize, please wait…</string>
    <string name="open">Open</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="fill_the_note">Fill title and content of the note.</string>
    <string name="search">Text what you are searching…</string>
    <string name="lock_note">Lock note</string>
    <string name="unlock_note_message">Do you want to unlock the note, removing the password?</string>
    <string name="lock_note_message">Set a password to lock your note: (must be at least 6 characters)</string>
    <string name="set">Set</string>
    <string name="delete_note_message">Do you want to delete this note?</string>
    <string name="note_deleted">Note deleted</string>
    <string name="remove_category">Remove category</string>
    <string name="select_a_category">Please select a category before!</string>
    <string name="remove_category_message">Do you want to remove</string>
    <string name="remove_category_notes_message">Do you want to keep the notes linked to the category or remove them?</string>
    <string name="keep">Keep</string>
    <string name="rename_category_message">Insert the new name for the category</string>
    <string name="category_name_exist">A category with the same name already exist. Please, choose a different one.</string>
    <string name="insert_category_name">Insert category name:</string>
    <string name="sort_notes">Sort notes by</string>
    <string name="alphabet">Alphabet</string>
    <string name="last_modify">Last modify</string>
    <string name="settings">Settings</string>
    <string name="and_ordered">And order</string>
    <string name="asc_order"><![CDATA[A -> Z\nOLDER -> NEWER]]></string>
    <string name="when_no_categories_is_selected">When no categories is selected.</string>
    <string name="show_no_categories_note">Show only the notes with no category.</string>
    <string name="show_all_notes">Show all notes whit no exception.</string>
    <string name="automatic_note_saves">Automatic note saves.</string>
    <string name="no_save_button_message">NO SAVE BUTTON!\nJust go back when you finished to edit. Your note will be automatically saved.</string>
    <string name="save_button_message">SAVE BUTTON!\nWhen you have finished to edit the note you must save by the save button. Otherwise go back and nothing will be saved.</string>
    <string name="no_valid_note_title">No valid note</string>
    <string name="no_valid_note_message">Your note is not valid. You must fill the title and the content. Do you want to continue editing or discard?</string>
    <string name="editing">Editing</string>
    <string name="discard">Discard</string>
    <string name="settings_saved">Settings saved</string>
    <string name="saved">Saved</string>
    <string name="user_profile">User profile</string>
    <string name="no_user_account_title">No user account</string>
    <string name="no_user_account_message">Do you want to create an account where keep synced and safe your notes? Or login into your existent one.</string>
    <string name="close">Close</string>
    <string name="forget_to_save_note">Did you forget to save the note?</string>
    <string name="recover">recover</string>
    <string name="deleting_category">Deleting category…</string>
    <string name="error_while_deleting_category">Error while deleting category. Please retry!</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure to logout from your online account? You should have an active internet connection before to proceed!</string>
    <string name="notes_download">Notes download</string>
    <string name="notes_download_message">Your notes will be downloaded and locally saved. Do you want to keep the online notes or do you want to erase from your account?</string>
    <string name="erase">Erase</string>
    <string name="waiting_notes_migrate">Waiting while migrating the notes…</string>
    <string name="notes_conflict">Notes conflict</string>
    <string name="notes_conflict_message">Your account already has a notes database. Do you want to maintain your local notes and overwrite the remote database or viceversa?</string>
    <string name="maintain">Maintain local</string>
    <string name="download_remote_db">Use existing remote db</string>
    <string name="account_info">Account info</string>
    <string name="logged_as">You are logged as:</string>
    <string name="migration_completed">Migration completed!</string>
    <string name="dispose_notes">Dispose notes</string>
    <string name="one_column_dispose">Disposed notes in one ordered column.</string>
    <string name="two_column_dispose">Dispose notes on two auto-size columns.</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="change_your_password">Change your password</string>
    <string name="delete_user_title">Delete user</string>
    <string name="delete_user_password_message">Do you want to delete your user? Insert your password and confirm. Your notes will be locally saved.</string>
    <string name="delete_user_no_password_message">Do you want to delete your user?</string>
    <string name="change_user_password_title">Change password</string>
    <string name="change_user_password_message">Please input your new password:\n(must be at least 6 characters)</string>
    <string name="password_updated">Password updated!</string>
    <string name="updating_password">Updating password…</string>
    <string name="reauthenticate">Reauthenticate</string>
    <string name="reauthenticate_message">You need to reauthenticate to change your password. Please insert your current assword:</string>
    <string name="ok">OK</string>
    <string name="user_deleted">User deleted! Notes are locally saved!</string>
    <string name="deleting_user">Deleting user…</string>
    <string name="no_google_auth_credential">Impossible to retrieve your Google account. Please logout and login again!</string>
    <string name="facebook_error_delete">You need to logout and then login again with Facebook before to proceed!</string>
    <string name="master_password_title">Master password</string>
    <string name="master_password_message">You can set a master password. In this way ALL the app is locked until you insert this password. You can also use your fingerprint, in case of your device has a reader. If you want create your password now.</string>
    <string name="proceed_whitout_master_password">Proceed whitout password</string>
    <string name="insert_master_pas">Insert master password:</string>
    <string name="unlock">Unlock</string>
    <string name="access_denied">Access denied!</string>
    <string name="wrong_master_password">Wrong password. Retry.</string>
    <string name="insert_password">Insert password</string>
    <string name="master_password_removed">Master password removed!</string>
    <string name="set_master_password_message">Insert your master password:</string>
    <string name="master_password_set">Master password set!</string>
    <string name="master_password">Master password</string>
    <string name="autolock">AUTOLOCK\nNotes list and settings will be automatically locked 1 minute after you don\'t use the app, if there is a master password!</string>
    <string name="no_autolock">NO AUTOLOCK\nNotes list will be always available, after first unlock (if you have a master password)!</string>
    <string name="ad_mod_id" translatable="false">ca-app-pub-9694877750002081~2407141000</string>
    <string name="set_new_master_password">Set new master password</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_message">Create an your own account, useful to for syncing your notes between your devices. In this way you can also store your notes and easily restore on your new device. You can even set a “master password” to lock all the app. Are you ready?</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="remove">Remove</string>
    <string name="desc_order"><![CDATA[Z -> A\nNEWER -> OLDER]]></string>
    <string name="snackbar_link_click">It seems that you clicked a link!</string>
    <string name="snackbar_email_click">It seems that you clicked an email address!</string>
    <string name="snackbar_phone_click">It seems that you clicked a phone number!</string>
    <string name="first_snackbark_advice">If you don\'t need the snackbar info you can swipe out it on the right, without waiting!</string>
    <string name="set_master_password_before">Set a master password before!</string>
    <string name="text">Text</string>
    <string name="position">Position</string>
    <string name="user_position_title">User position</string>
    <string name="user_position_message">I need the permission to retrieve your position, for locating you on the map. Do you allow?</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="no_location_permission">I can\'t get your position: permission denied!</string>
    <string name="no_location_permission_no_ask">You don\'t grant the location permission and said to not ask again. Change this in the system settings!</string>
    <string name="your_position">Your position</string>
    <string name="your_saved_position">Note position</string>
    <string name="start_note_position_drag">Now you can move the marker to the new position!</string>
    <string name="end_note_position_drag">The new note position is set!</string>
    <string name="note_position_removed">Note position removed!</string>
    <string name="search_place">Search\nplace</string>
    <string name="note_position_now_is">Your note position is now in:</string>
    <string name="map_long_press_marker">Long press on the map to put a marker and save a position.</string>

    <string name="reminder">Reminder</string>
    <string name="enable_reminder">Enable reminder</string>
    <string name="reminder_enabled">THE REMINDER IS ENABLED!</string>
    <string name="reminder_not_enabled">THE REMINDER IS NOT ENABLED!</string>
    <string name="select_valid_date_reminder">Select a valid date before!</string>
    <string name="reminder_before_now">Your reminder is before now!</string>
    <string name="note_reminder">Note reminder!</string>
</resources>
