<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:orderInCategory="100"
        android:icon="@drawable/search_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_account"
        android:orderInCategory="101"
        android:title="@string/user_profile"
        android:icon="@drawable/ic_account_circle_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_24dp"
        app:showAsAction="ifRoom" />

</menu>