<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".NewNoteActivity">

    <item android:id="@+id/action_lock"
        android:orderInCategory="100"
        android:title="@string/lock_note"
        android:icon="@drawable/ic_lock_open_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_unlock"
        android:orderInCategory="100"
        android:title="@string/unlock_note"
        android:icon="@drawable/ic_lock_close_24dp"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete"
        android:orderInCategory="101"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_24dp"
        app:showAsAction="ifRoom" />

</menu>
