<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/viewCategoriesBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#546e7a"
        android:alpha="0.45" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCategories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="70dp"
            android:clipToPadding="false"
            android:alpha="0.55"
            android:nestedScrollingEnabled="true"/>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCategoriesButtons"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="#cc546e7a">

        <ImageButton
            android:id="@+id/buttonAddCategory"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/category_add"
            android:background="@drawable/category_buttons_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/buttonRenameCategory"
            android:contentDescription="@string/add_category" />

        <ImageButton
            android:id="@+id/buttonRenameCategory"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/category_buttons_background"
            android:src="@drawable/rename_category"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/buttonAddCategory"
            app:layout_constraintRight_toLeftOf="@id/buttonRemoveCategory"
            android:contentDescription="@string/rename_category"/>

        <ImageButton
            android:id="@+id/buttonRemoveCategory"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/delete"
            android:src="@drawable/ic_delete_category"
            android:background="@drawable/category_buttons_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/buttonRenameCategory"
            android:contentDescription="@string/delete_category"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>